[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/FoodItems/ItemGrid.gd" type="Script" id=2]
[ext_resource path="res://scenes/FoodItems/BaseIngredient.tscn" type="PackedScene" id=3]

[node name="ItemGrid" type="AspectRatioContainer"]
margin_right = 157.0
margin_bottom = 179.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 11.0
margin_right = 157.0
margin_bottom = 168.0

[node name="CookLengthLabel" type="Label" parent="VBoxContainer"]
margin_right = 157.0
margin_bottom = 14.0
text = "5 mins"
align = 1

[node name="MainDish" type="TextureRect" parent="VBoxContainer"]
margin_left = 46.0
margin_top = 18.0
margin_right = 110.0
margin_bottom = 82.0
size_flags_horizontal = 4
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MainDish"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -14.0
text = "2"

[node name="DishIngredients" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 157.0
margin_bottom = 133.0
size_flags_vertical = 3

[node name="BaseIngredient" parent="VBoxContainer/DishIngredients" instance=ExtResource( 3 )]
margin_right = 49.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="BaseIngredient2" parent="VBoxContainer/DishIngredients" instance=ExtResource( 3 )]
margin_left = 53.0
margin_right = 103.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="BaseIngredient3" parent="VBoxContainer/DishIngredients" instance=ExtResource( 3 )]
margin_left = 107.0
margin_right = 157.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="MakeButton" type="Button" parent="VBoxContainer"]
margin_top = 137.0
margin_right = 157.0
margin_bottom = 157.0
text = "Make"

[node name="DishCookTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="button_down" from="VBoxContainer/MakeButton" to="." method="_on_MakeButton_button_down"]
[connection signal="timeout" from="DishCookTimer" to="." method="_on_DishCookTimer_timeout"]
